clusters/building-blocks/other/apps/shiori/app/shiori-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shiori
  namespace: default
  labels:
    app.kubernetes.io/name: shiori
spec:
  selector:
    app.kubernetes.io/name: shiori
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
