clusters/building-blocks/other/apps/shiori/app/shiori-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shiori
  namespace: default
  labels:
    app.kubernetes.io/name: shiori
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`links.home.${DOMAIN_NAME}`)
      priority: 10
      services:
        - kind: Service
          name: shiori
          namespace: default
          passHostHeader: true
          port: 8080
          scheme: http
